#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT([libalislconaxvsc], [0.0.0], [deji.aribuki@alitech.com], [libalislconaxvsc], [http://www.alitech.com])
AC_PREREQ([2.68])
AC_CONFIG_AUX_DIR([config-aux])
AM_INIT_AUTOMAKE([foreign -Wall -Werror])
LT_INIT
AC_CONFIG_HEADER([config.h])

LIBALISLCONAXVSC_MAJOR_VERSION=0
LIBALISLCONAXVSC_MINOR_VERSION=0
LIBALISLCONAXVSC_MICRO_VERSION=0
LIBALISLCONAXVSC_INTERFACE_AGE=0
LIBALISLCONAXVSC_BINARY_AGE=0
LIBALISLCONAXVSC_VERSION=$LIBALISLCONAXVSC_MAJOR_VERSION.$LIBALISLCONAXVSC_MINOR_VERSION.$LIBALISLCONAXVSC_MICRO_VERSION

AC_SUBST(LIBALISLCONAXVSC_MAJOR_VERSION)
AC_SUBST(LIBALISLCONAXVSC_MINOR_VERSION)
AC_SUBST(LIBALISLCONAXVSC_MICRO_VERSION)
AC_SUBST(LIBALISLCONAXVSC_INTERFACE_AGE)
AC_SUBST(LIBALISLCONAXVSC_BINARY_AGE)
AC_SUBST(LIBALISLCONAXVSC_VERSION)

AC_DEFINE_UNQUOTED(LIBALISLCONAXVSC_VERSION, "$LIBALISLCONAXVSC_VERSION", [The libalislconaxvsc version])
AC_DEFINE_UNQUOTED(LIBALISLCONAXVSC_MAJOR_VERSION, $LIBALISLCONAXVSC_MAJOR_VERSION, [The libalislconaxvsc major version])
AC_DEFINE_UNQUOTED(LIBALISLCONAXVSC_MINOR_VERSION, $LIBALISLCONAXVSC_MINOR_VERSION, [The libalislconaxvsc minor version])
AC_DEFINE_UNQUOTED(LIBALISLCONAXVSC_MICRO_VERSION, $LIBALISLCONAXVSC_MICRO_VERSION, [The libalislconaxvsc micro version])

PACKAGE=libalislconaxvsc
VERSION=$LIBALISLCONAXVSC_VERSION

# libtool versioning
LT_RELEASE=$LIBALISLCONAXVSC_MAJOR_VERSION.$LIBALISLCONAXVSC_MINOR_VERSION
LT_CURRENT=`expr $LIBALISLCONAXVSC_MICRO_VERSION - $LIBALISLCONAXVSC_INTERFACE_AGE`
LT_BINARY=`expr $LIBALISLCONAXVSC_MICRO_VERSION - $LIBALISLCONAXVSC_BINARY_AGE`
LT_REVISION=$LIBALISLCONAXVSC_INTERFACE_AGE
LT_AGE=`expr $LIBALISLCONAXVSC_BINARY_AGE - $LIBALISLCONAXVSC_INTERFACE_AGE`

AC_SUBST(LT_RELEASE)
AC_SUBST(LT_CURRENT)
AC_SUBST(LT_BINARY)
AC_SUBST(LT_REVISION)
AC_SUBST(LT_AGE)

AM_INIT_AUTOMAKE($PACKAGE, $VERSION, no-define)

# Checks for programs.

AC_PROG_CC
AC_PROG_CXX
AM_PROG_LIBTOOL

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CHECK_FUNCS([getopt getopt_long])

AC_ARG_ENABLE(examples,
			  AC_HELP_STRING([--enable-examples],              
						     [build test programs @<:@default=no@:>@]),
			  [], [enable_examples=no])
AM_CONDITIONAL(BUILD_EXAMPLES, test "$enable_examples" = "yes")


AC_ARG_ENABLE(docs,
			  AC_HELP_STRING([--enable-docs],					
						     [build documentation @<:@default=no@:>@]),
			  [], [enable_docs=no])
AM_CONDITIONAL(BUILD_DOCUMENT, test "$enable_docs" = "yes")

if test "$enable_docs" = "yes"; then
	AC_CHECK_PROG(DOXYGEN, [doxygen], [true], [false])
fi
AM_CONDITIONAL(HAVE_DOXYGEN, [test "$DOXYGEN" = "true"])

AM_CONDITIONAL(BUILD_SHARED, test "$enable_shared" = "yes")
AM_CONDITIONAL(BUILD_STATIC, test "$enable_static" = "yes")

AC_ARG_ENABLE(debug,
			  AC_HELP_STRING([--enable-debug],
			                 [enable debug information output @<:@default=no@:>@]),
			  [], [enable_debug=no])
if test "$enable_debug" = "yes"; then
	CFLAGS="-g3 -O0 -fno-inline -Wno-inline $CFLAGS"
	ENABLE_DEBUG=1
	AC_DEFINE(ENABLE_DEBUG,1,[Define to 1 if you want to output log.])
else
	ENABLE_DEBUG=0
fi
AM_CONDITIONAL(BUILD_DEBUG, test "$enable_debug" = "yes")
AC_SUBST(ENABLE_DEBUG)

AC_CONFIG_FILES([
Makefile
libalislconaxvsc.pc
src/Makefile
include/Makefile
examples/Makefile
doc/Makefile
doc/doxygen/Makefile
])
AC_OUTPUT

AC_MSG_RESULT([examples   : $enable_example])
AC_MSG_RESULT([docs       : $DOXYGEN])
AC_MSG_RESULT([debug      : $enable_debug])
