dnl
dnl libalisldb configure.ac
dnl
AC_INIT([libalisldb], [0.0.0], [summer.xia@alitech.com])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([foreign -Wall -Werror])
LT_INIT
AC_PROG_CC
AC_CONFIG_HEADERS([config.h])

AC_CONFIG_FILES([
Makefile
libalisldb.pc
include/Makefile
examples/Makefile
src/Makefile
doc/Makefile
doc/doxygen/Makefile
lib/Makefile
])

AC_OUTPUT
