#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT([libalisltrng], [0.0.0], [Owen.Zhao@alitech.com], [libalisltrng], [http://www.alitech.com])
AC_PREREQ([2.68])
AC_CONFIG_HEADER([config.h])

LIBALISLTRNG_MAJOR_VERSION=0
LIBALISLTRNG_MINOR_VERSION=0
LIBALISLTRNG_MICRO_VERSION=0
LIBALISLTRNG_INTERFACE_AGE=0
LIBALISLTRNG_BINARY_AGE=0
LIBALISLTRNG_VERSION=$LIBALISLTRNG_MAJOR_VERSION.$LIBALISLTRNG_MINOR_VERSION.$LIBALISLTRNG_MICRO_VERSION

AC_SUBST(LIBALISLTRNG_MAJOR_VERSION)
AC_SUBST(LIBALISLTRNG_MINOR_VERSION)
AC_SUBST(LIBALISLTRNG_MICRO_VERSION)
AC_SUBST(LIBALISLTRNG_INTERFACE_AGE)
AC_SUBST(LIBALISLTRNG_BINARY_AGE)
AC_SUBST(LIBALISLTRNG_VERSION)

AC_DEFINE_UNQUOTED(LIBALISLTRNG_VERSION, "$LIBALISLTRNG_VERSION", [The libalisltrng version])
AC_DEFINE_UNQUOTED(LIBALISLTRNG_MAJOR_VERSION, $LIBALISLTRNG_MAJOR_VERSION, [The libalisltrng major version])
AC_DEFINE_UNQUOTED(LIBALISLTRNG_MINOR_VERSION, $LIBALISLTRNG_MINOR_VERSION, [The libalisltrng minor version])
AC_DEFINE_UNQUOTED(LIBALISLTRNG_MICRO_VERSION, $LIBALISLTRNG_MICRO_VERSION, [The libalisltrng micro version])

PACKAGE=libalisltrng
VERSION=$LIBALISLTRNG_VERSION

# libtool versioning
LT_RELEASE=$LIBALISLTRNG_MAJOR_VERSION.$LIBALISLTRNG_MINOR_VERSION
LT_CURRENT=`expr $LIBALISLTRNG_MICRO_VERSION - $LIBALISLTRNG_INTERFACE_AGE`
LT_BINARY=`expr $LIBALISLTRNG_MICRO_VERSION - $LIBALISLTRNG_BINARY_AGE`
LT_REVISION=$LIBALISLTRNG_INTERFACE_AGE
LT_AGE=`expr $LIBALISLTRNG_BINARY_AGE - $LIBALISLTRNG_INTERFACE_AGE`

AC_SUBST(LT_RELEASE)
AC_SUBST(LT_CURRENT)
AC_SUBST(LT_BINARY)
AC_SUBST(LT_REVISION)
AC_SUBST(LT_AGE)

AM_INIT_AUTOMAKE($PACKAGE, $VERSION, no-define)

# Checks for programs.

AC_PROG_CC
AC_PROG_CXX
AM_PROG_LIBTOOL

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CHECK_FUNCS([getopt getopt_long])

AC_ARG_ENABLE(examples,
			  AC_HELP_STRING([--enable-examples],              
						     [build test programs @<:@default=no@:>@]),
			  [], [enable_examples=no])
AM_CONDITIONAL(BUILD_EXAMPLES, test "$enable_examples" = "yes")


AC_ARG_ENABLE(docs,
			  AC_HELP_STRING([--enable-docs],					
						     [build documentation @<:@default=no@:>@]),
			  [], [enable_docs=no])
AM_CONDITIONAL(BUILD_DOCUMENT, test "$enable_docs" = "yes")

if test "$enable_docs" = "yes"; then
	AC_CHECK_PROG(DOXYGEN, [doxygen], [true], [false])
fi
AM_CONDITIONAL(HAVE_DOXYGEN, [test "$DOXYGEN" = "true"])

AM_CONDITIONAL(BUILD_SHARED, test "$enable_shared" = "yes")
AM_CONDITIONAL(BUILD_STATIC, test "$enable_static" = "yes")

AC_ARG_ENABLE(debug,
			  AC_HELP_STRING([--enable-debug],
			                 [enable debug information output @<:@default=no@:>@]),
			  [], [enable_debug=no])
if test "$enable_debug" = "yes"; then
	CFLAGS="-g3 -O0 -fno-inline -Wno-inline $CFLAGS"
	ENABLE_DEBUG=1
	AC_DEFINE(ENABLE_DEBUG,1,[Define to 1 if you want to output log.])
else
	ENABLE_DEBUG=0
fi
AM_CONDITIONAL(BUILD_DEBUG, test "$enable_debug" = "yes")
AC_SUBST(ENABLE_DEBUG)

#
## MACRO for platform build
#
AM_CONDITIONAL([BUILD_BYPLATFORM], [test "yes" = "no"])

AC_OUTPUT([
Makefile
libalisltrng.pc

src/Makefile

include/Makefile

examples/Makefile

doc/Makefile
doc/doxygen/Makefile
])
